# modbus-data-logger

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  libmbdl.pc.in  mbdl.service
.ci/: Dockerfile  build_project.sh  entrypoint.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/: action.yml
.github/workflows/: action.yml  continuous-integration-workflow.yml
docs/: README_Architecture.md  README_Build.md  README_BuildUi.md  README_Contribute.md  README_GetStarted.md  README_IncludeLibrary.md  README_Install.md  README_Run.md  README_Tests.md
domain/application/: ConsoleApplication.cpp
domain/application/includes/: ModbusDataLoggerFacadeFactory.hpp  ModbusDataLoggerFacadeImpl.hpp  ModbusDataLoggerFrameworks.hpp
domain/application/interfaces/: ModbusDataLoggerFacade.hpp  ModbusDataLoggerGateway.hpp
domain/application/sources/: ConsoleApplication.cpp  ModbusDataLoggerFacadeFactory.cpp  ModbusDataLoggerFacadeImpl.cpp
domain/application/testing/: TestModbusDataLoggerFacadeFactory.cpp  TestModbusDataLoggerFacadeImpl.cpp
domain/dummy/src/: main.cpp
domain/entity/includes/: ModbusConfiguration.hpp  ModbusDataMapping.hpp  ModbusLoggerConfiguration.hpp  ModbusTcpConstants.hpp  ModbusTcpMessageFrame.hpp  ModbusTcpRequest.hpp  ModbusTcpResponse.hpp
domain/entity/interfaces/: ModbusDataLog.hpp
domain/entity/sources/: ModbusConfiguration.cpp  ModbusDataMapping.cpp  ModbusLoggerConfiguration.cpp  ModbusTcpMessageFrame.cpp  ModbusTcpRequest.cpp  ModbusTcpResponse.cpp
domain/entity/testing/: TestModbusDataMapping.cpp  TestModbusTcpMessageFrame.cpp  TestModbusTcpRequest.cpp  TestModbusTcpResponse.cpp
domain/framework/includes/: FileLoggerControllerFactory.hpp  FileReaderFactory.hpp  JsonFileAccessor.hpp  JsonFileReader.hpp  LibModbusMaster.hpp  LibModbusSlave.hpp  SignalEvent.hpp  SpdlogFileController.hpp
domain/framework/interfaces/: ConfigurationFileAccessor.hpp  ConfigurationFileReader.hpp
domain/framework/sources/: FileLoggerControllerFactory.cpp  FileReaderFactory.cpp  JsonFileAccessor.cpp  JsonFileReader.cpp  LibModbusMaster.cpp  LibModbusSlave.cpp  SpdlogFileController.cpp
domain/framework/testing/: TestFileLoggerControllerFactory.cpp  TestFileReaderFactory.cpp  TestJsonFileAccessor.cpp  TestJsonFileReader.cpp  TestLibModbusMaster.cpp  TestLibModbusSlave.cpp  TestLibModbusSlaveTest.cpp  TestSpdlogFileController.cpp
domain/gateway/includes/: ModbusComponentsFactory.hpp  ModbusGateway.hpp  ModbusMasterController.hpp  ModbusMasterControllerImpl.hpp  ModbusSlaveController.hpp  ModbusSlaveControllerImpl.hpp  ModbusSlaveFactory.hpp  ModbusSlaveHandler.hpp  ModbusTcpMessageFrame.hpp  ModbusTcpRequest.hpp  ModbusTcpResponse.hpp
domain/gateway/interfaces/: ModbusMaster.hpp  ModbusMasterController.hpp  ModbusRequestController.hpp  ModbusResponseController.hpp  ModbusSlave.hpp  ModbusSlaveController.hpp
domain/gateway/sources/: ModbusComponentsFactory.cpp  ModbusDataMapping.cpp  ModbusGateway.cpp  ModbusMasterController.cpp  ModbusMasterControllerImpl.cpp  ModbusSlaveController.cpp  ModbusSlaveControllerImpl.cpp  ModbusSlaveFactory.cpp  ModbusSlaveHandler.cpp  ModbusTcpMessageFrame.cpp  ModbusTcpRequest.cpp  ModbusTcpResponse.cpp
domain/gateway/testing/: TestModbusComponentsFactory.cpp  TestModbusDataMapping.cpp  TestModbusGateway.cpp  TestModbusMasterController.cpp  TestModbusSlaveController.cpp  TestModbusSlaveFactory.cpp  TestModbusTcpMessageFrame.cpp  TestModbusTcpRequest.cpp  TestModbusTcpResponse.cpp
domain/include/: HelloModbus.hpp
domain/logging/includes/: ModbusDataLogger.hpp  SpdlogFileController.hpp
domain/logging/interfaces/: DataLogger.hpp  FileLogger.hpp  FileLoggerController.hpp  RealTimeLogger.hpp
domain/logging/sources/: ModbusDataLogger.cpp  SpdlogFileController.cpp
domain/logging/testing/: TestModbusDataLogger.cpp
domain/src/: HelloModbus.cpp
domain/utility/includes/: TimerFactory.hpp  TimerImpl.hpp
domain/utility/interfaces/: Timer.hpp
domain/utility/sources/: TimerFactory.cpp  TimerImpl.cpp
domain/utility/testing/: TestTimer.cpp  TestTimerFactory.cpp
gui/: CMakeLists.txt
gui/qml/: MainWindow.qml
gui/scripts/: build_ui.sh  run_ui_native.py  run_unittests.py
gui/ui/: resources.qrc
gui/ui/application/: GuiApplication.cpp
gui/ui/facade/includes/: ModbusDataLoggerFacadeUIWrapper.hpp  ModbusDataLoggerManager.hpp  ModbusDataLoggerSignals.hpp  ModbusDataLoggerThreadController.hpp
gui/ui/facade/sources/: ModbusDataLoggerFacadeUIWrapper.cpp  ModbusDataLoggerThreadController.cpp
gui/ui/facade/testing/: TestModbusDataLoggerFacadeUIWrapper.cpp
gui/ui/qml/: MainWindow.qml
gui/ui/resources/qml/: MainWindow.qml
gui/ui/views/includes/: ConfigurationView.hpp  InitialView.hpp  LoggingView.hpp
gui/ui/views/sources/: ConfigurationView.cpp  InitialView.cpp  LoggingView.cpp
gui/ui/views/testing/: TestConfigurationView.cpp  TestInitialView.cpp
integrationtests/: TestExtMasterIntSlaveCommunication.cpp  TestIntMasterExtSlaveCommunication.cpp  TestModbusCommunication.cpp  TestModbusDataLoggerFacade.cpp  TestModbusLogging.cpp  TestModbusReconnection.cpp  TestModbusSlaveCommunication.cpp
integrationtests/fixtures/includes/: FixtureDataLogger.hpp  FixtureExternalModbusMaster.hpp  FixtureExternalModbusSlave.hpp  FixtureModbusDataLoggerFacade.hpp  FixtureModbusGateway.hpp  FixtureModbusMasterController.hpp  FixtureModbusSlaveController.hpp  TestConstants.hpp
integrationtests/fixtures/sources/: FixtureDataLogger.cpp  FixtureExternalModbusMaster.cpp  FixtureExternalModbusSlave.cpp  (+4 more)
resources/: mbdl_config.json
scripts/: build_native.sh  build_shared.sh  check_system_requirements.py  install.sh  install_prerequisities.sh  run_clang_tidy.sh  run_integrationtests.py  run_unittests.py  run_unittests.sh  
service/: mbdl.service  start_mbdl_service.sh  stop_mbdl_service.sh
test_helper/: PymodbusMaster.py  PymodbusSlave.py
ui/: CMakeLists.txt  build_ui.sh  resources.qrc
ui/application/: GuiApplication.cpp
ui/qml/: MainWindow.qml
(+17 files in other folders)
